--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/941c3966fa.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sean He</title>
+    <title>About Me</title>
 </head>
 <header>
     <nav>
