--- a/about.html
+++ b/about.html
@@ -25,11 +25,10 @@
     <div class="page_text">
         <h1>About Me <i class="fa-solid fa-user"></i></h1>
         <hr>
-        <p>I am currently a senior year honors student at City University of New York's Queens College, 
-            pursuing a degree in Computer Science. 
+        <p>I recently graduated from the City University of New York's Queens College with a Bachelors degree in Computer Science. 
             After completing an Associates Degree (Mathematics and Science) at Queensborough Community College, 
             I continued my education at Queens College, 
-            where I am a member of the Transfer Honors Program, which recognizes extra-curricular and academic excellence. 
+            where I was a member of the Transfer Honors Program, which recognizes extra-curricular and academic excellence. 
         </p>
         <p>
             I have worked as an cybersecurity research intern at US Department of Energy Pacific Northwest National Laboratory where I 
